src/ui/snapshots/connections_160x45.snap
---
source: src/ui/layout.rs
assertion_line: 441
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                                               macOS 26.5  load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸CONNECTIONS╺ 20 · Σ↓   7.4 Mb/s · Σ↑   1.2 Mb/s ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│PROCESS                      LOCAL                          REMOTE                                    STATE        RTT  RETX        ↓/s        ↑/s       TOTAL│
│Safari:251                   192.168.1.24:52344             151.101.1.140:443                         ESTAB     18.2ms  0.5%   6.5 Mb/s   512 Kb/s    263M/18M│
│claude:268                   192.168.1.24:52901             160.79.104.10:443                         ESTAB     41.7ms  1.0%   771 Kb/s   182 Kb/s      31M/6M│
│claude:268                   192.168.1.24:52902             160.79.104.10:443                         ESTAB     39.9ms  1.0%    90 Kb/s    65 Kb/s       4M/2M│
│postgres:438                 127.0.0.1:5432                 127.0.0.1:60112                           ESTAB      0.3ms  0.0%    34 Kb/s   408 Kb/s      1M/14M│
│mxmon:200                    0.0.0.0:5353                   *                                         UDP            –     –     7 Kb/s     3 Kb/s    299K/99K│
│Music:310                    192.168.1.24:53555             17.253.31.14:443                          TIMEWT    22.5ms  0.6%      0 b/s      0 b/s       0B/0B│
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit                              sudo for all procs
