src/ui/snapshots/connections_80x24.snap
---
source: src/ui/layout.rs
assertion_line: 441
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max                                      HH:MM:SS
╭╸CONNECTIONS╺ 20 · Σ↓   7.4 Mb/s · Σ↑   1.2 Mb/s ─────────────────────────────╮
│PROCESS             REMOTE                  STATE        RTT        ↓/s
│Safari:251          151.101.1.140:443       ESTAB     18.2ms   6.5 Mb/s   512 K
│claude:268          160.79.104.10:443       ESTAB     41.7ms   771 Kb/s   182 K
│claude:268          160.79.104.10:443       ESTAB     39.9ms    90 Kb/s    65 K
│postgres:438        127.0.0.1:60112         ESTAB      0.3ms    34 Kb/s   408 K
│mxmon:200           *                       UDP            –     7 Kb/s     3 K
│Music:310           17.253.31.14:443        TIMEWT    22.5ms      0 b/s      0
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill
