src/ui/snapshots/inspect_battery_120x36.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                   load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸CPU╺  44.0% ───────────────────────────────────────────────────────╮╭╸POWER╺ SYS  26.6W ─────────────────────────────╮
│     ▂     E 2.08GHz · P 2.79GHz                 63°C avg · 70°C max││PKG  6.54W  peak 13.2W                          │
│   ▄██▅                                                             ││CPU █████▌▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         3.70W│
│E  ████      62.0% @ 2.08GHz  360mW                                 ││GPU ████▎▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         2.82W│
│        ▃  ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀││ANE ▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏          20mW│
│P0 ▆▃▂▅██    37.0% @ 2.79GHz  5.80W⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││RAM █▉▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         1.26W│
│   ▄▁      ⣿⣿⣿⣿⣿⣿⣿⣿⣿╭ inspect ──────────────────────────────────────────────────────────────── ✕ ╮▏▏▏▏▏▏         3.10W│
│P1 ██▆▃▂▅    39.0% @│  storage   kernel   battery                                                │▏▏▏▏▏▏         800mW│
╰────────────────────│                                                                            │────────────────────╯
╭╸GPU╺  39.9% ───────│           cycles  312 of 1000 rated                                        │────────────────────╮
│@ 1.30GHz  2.82W    │           health  91% of design capacity                                   │       pressure  OK │
│                    │           charge  5792 of 7150 mAh                                         │▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏│
│⣠⣤  ⣠⣄ ⢀⣤⡄ ⢀⣤⡀ ⣠⣤  ⣠│      recent band  81%–88% (optimized charging)                             │  9.0G              │
│⣿⣿⣷⣾⣿⣿⣷⣾⣿⣿⣶⣿⣿⣿⣶⣿⣿⣷⣾⣿│            cells  4096mV · 4096mV · 4088mV                                 │                    │
│rend █████▊▏▏▏▏▏▏▏▏▏│        imbalance  8mV spread                                               │⠒⣆⡤⠤⠤⠴⠒⠲⣤⠤⠤⠤⠖⠒⢦⡤⠤⠤⠴⠒│
╰────────────────────│             temp  31°C                                                     │────────────────────╯
╭╸NETWORK╺ ↓  22.9 Mb│    lifetime peak  45°C                                                     │────────────────────╮
│Σ↓  7.4G  Σ↑  1.4G  │                                                                            │▏▏▏▏▏▏    ⚡  charging
│↑   7.5 Mb/s⣾⣧⣷⣾⣾⣷⣷⣾│                                                                            │  1h34m to full  ada│
│⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│                                                                            │  ┌─▶ SoC     6.54W │
│⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│                                                                            │──┼─▶ DISP    3.10W │
│↓  47.5 Mb/s⢸⢸⢸⢸⢹⢹⢹⢹│                                                                            │  └─▶ other   17.0W │
╰────────────────────│                                                                            │────────────────────╯
╭╸PROCESSES╺ 160 · 10│                                                                            │────────────────────╮
│    PID USER        │                                                                            │                    │
│    659 yusuf       │                                                                            │                    ┃
│    421 root        │ ← → tabs · esc close                                                       │                    ┃
│    642 _windowse…  ╰────────────────────────────────────────────────────────────────────────────╯                    │
│    404 yusuf        156.0  348mW    494M       –       –   16 R    9m 24s Xcode                                      │
│    863 yusuf        147.0  231mW    1.5G       –       –   20 S   26m 03s Music                                      │
│    625 root         145.0  725mW    975M       –       –    6 S   17m 25s Terminal                                   │
│    387 _windowse…   143.0  319mW    457M       –       –   15 S    8m 47s bird                                       │
│    829 root         121.0  173mW    1.4G       –       –   18 S   24m 49s cargo                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit
