src/ui/snapshots/inspect_storage_120x36.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                   load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸CPU╺  44.0% ───────────────────────────────────────────────────────╮╭╸POWER╺ SYS  26.6W ─────────────────────────────╮
│     ▂     E 2.08GHz · P 2.79GHz                 63°C avg · 70°C max││PKG  6.54W  peak 13.2W                          │
│   ▄██▅                                                             ││CPU █████▌▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         3.70W│
│E  ████      62.0% @ 2.08GHz  360mW                                 ││GPU ████▎▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         2.82W│
│        ▃  ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀││ANE ▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏          20mW│
│P0 ▆▃▂▅██    37.0% @ 2.79GHz  5.80W⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││RAM █▉▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         1.26W│
│   ▄▁      ⣿⣿⣿⣿⣿⣿⣿⣿⣿╭ inspect ──────────────────────────────────────────────────────────────── ✕ ╮▏▏▏▏▏▏         3.10W│
│P1 ██▆▃▂▅    39.0% @│  storage   kernel   battery                                                │▏▏▏▏▏▏         800mW│
╰────────────────────│                                                                            │────────────────────╯
╭╸GPU╺  39.9% ───────│           health  ok                                                       │────────────────────╮
│@ 1.30GHz  2.82W    │             wear  6% of rated endurance used                               │       pressure  OK │
│                    │            spare  100% (fails below 99%)                                   │▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏│
│⣠⣤  ⣠⣄ ⢀⣤⡄ ⢀⣤⡀ ⣠⣤  ⣠│       drive temp  34°C                                                     │  9.0G              │
│⣿⣿⣷⣾⣿⣿⣷⣾⣿⣿⣶⣿⣿⣿⣶⣿⣿⣷⣾⣿│         lifetime  717.7 TB written · 296.9 TB read                         │                    │
│rend █████▊▏▏▏▏▏▏▏▏▏│            power  4383 hours · 441 cycles                                  │⠒⣆⡤⠤⠤⠴⠒⠲⣤⠤⠤⠤⠖⠒⢦⡤⠤⠤⠴⠒│
╰────────────────────│    unclean stops  62 · 0 media errors                                      │────────────────────╯
╭╸NETWORK╺ ↓  22.9 Mb│        throttled  0.0% of window                                           │────────────────────╮
│Σ↓  7.4G  Σ↑  1.4G  │ Macintosh HD - Data  cache hit 98.5% · write amp 2.02x                     │▏▏▏▏▏▏    ⚡  charging
│↑   7.5 Mb/s⣾⣧⣷⣾⣾⣷⣷⣾│     Macintosh HD  cache hit 0.0% · write amp –                             │  1h34m to full  ada│
│⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│          Preboot  cache hit 10.0% · write amp 2.00x                        │  ┌─▶ SoC     6.54W │
│⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│                                                                            │──┼─▶ DISP    3.10W │
│↓  47.5 Mb/s⢸⢸⢸⢸⢹⢹⢹⢹│                                                                            │  └─▶ other   17.0W │
╰────────────────────│                                                                            │────────────────────╯
╭╸PROCESSES╺ 160 · 10│                                                                            │────────────────────╮
│    PID USER        │                                                                            │                    │
│    659 yusuf       │                                                                            │                    ┃
│    421 root        │ ← → tabs · esc close                                                       │                    ┃
│    642 _windowse…  ╰────────────────────────────────────────────────────────────────────────────╯                    │
│    404 yusuf        156.0  348mW    494M       –       –   16 R    9m 24s Xcode                                      │
│    863 yusuf        147.0  231mW    1.5G       –       –   20 S   26m 03s Music                                      │
│    625 root         145.0  725mW    975M       –       –    6 S   17m 25s Terminal                                   │
│    387 _windowse…   143.0  319mW    457M       –       –   15 S    8m 47s bird                                       │
│    829 root         121.0  173mW    1.4G       –       –   18 S   24m 49s cargo                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit
