src/ui/snapshots/modal_details_120x36.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                   load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸PROCESSES 160 · 10 running · 549 thr╺────────────────────────────────────────────────────────────────────────────────╮
│    PID USER         CPU%▼    PWR     MEM     ↓/s     ↑/s  THR S      TIME NAME                                       │
│    659 yusuf        171.0  783mW    1.0G       –       –    8 S   18m 39s bird                                       ┃
│    421 root         169.0  377mW    531M       –       –   17 S   10m 01s node                                       ┃
│    642 _windowse…   158.0  754mW   1012M       –       –    7 I   18m 02s mds_stores                                 ┃
│    404 yusuf        156.0  348mW    494M       –       –   16 R    9m 24s Xcode                                      ┃
│    863 yusuf        147.0  231mW    1.5G       –       –   20 S   26m 03s Music                                      ┃
│    625 root         145.0  725mW    975M       –       –    6 S   17m 25s Terminal                                   ┃
│    387 _windowse…   1╭ process ───────────────────────────────────────────────────────────────╮                      ┃
│    829 root         1│ bird                                                                   │                      ┃
│    591 _windowse…   1│                                                                        │                      ┃
│    353 yusuf        1│ pid / ppid  659 / 1                                                    │                      ┃
│    812 yusuf        1│      user  yusuf                                                       │                      ┃
│    574 root         1│     state  Sleeping                                                    │                      ┃
│    336 _windowse…   1│       cpu  171.0% of one core                                          │                      ┃
│    795 _windowse…    │    memory  1.0G                                                        │                      ┃
│    557 yusuf         │   threads  8                                                           │                      ┃
│    319 root          │     power  783mW                                                       │                      ┃
│    778 root          │       ipc  3.90 instr/cycle                                            │                      ┃
│    540 _windowse…    │  core mix  P  13% · E  87%                                             │                      ┃
│    302 yusuf         │   disk io  R    2M/s · W    1M/s                                       │                      ┃
│    761 yusuf         │    net io  –                                                           │                      ┃
│    523 root          │  cpu time  18m 39s                                                     │                      ┃
│    285 _windowse…    │   started  169d 15h ago                                                │                      ┃
│    744 _windowse…    │      path  /usr/bin/bird                                               │                      ┃
│    506 yusuf         ╰────────────────────────────────────────────────────────────────────────╯                      ┃
│    268 root          52.0  116mW    198M    105K     30K    8 R    4m 28s claude                                     ┃
│    710 yusuf         30.0  870mW    1.1G       –       –   11 I   20m 30s postgres                                   │
│    472 root          28.0  464mW    642M       –       –   20 R   11m 52s mxmon                                      │
│    234 _windowse…    26.0   58mW    124M       –       –    6 I    3m 14s kernel_task                                │
│    693 _windowse…    17.0  841mW    1.1G       –       –   10 S   19m 53s node                                       │
│    455 yusuf         15.0  435mW    605M       –       –   19 S   11m 15s nginx                                      │
│    217 root          13.0   29mW     87M       –       –    5 S    2m 37s WindowServer                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit
