src/ui/snapshots/modal_help_120x36.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                   load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸PROCESSES 160 · 10 running · 549 thr╺────────────────────────────────────────────────────────────────────────────────╮
│    PID USER         CPU%▼    PWR     MEM     ↓/s     ↑/s  THR S      TIME NAME                                       │
│    659 yusuf        171.0  783mW    1.0G       –       –    8 S   18m 39s bird                                       ┃
│    421 root         169.0  377mW    531M       –       –   17 S   10m 01s node                                       ┃
│    642 _windowse…   158.0  754mW   1012M       –       –    7 I   18m 02s mds_stores                                 ┃
│    404 yusuf        156.0  348mW    494M       –       –   16 R    9m 24s Xcode                                      ┃
│    863 yusuf        147.0  231mW    1.5G       –       –   20 S   26m 03s Music                                      ┃
│    625 root         145.0  ╭ help ──────────────────────────────────────────────────────╮                            ┃
│    387 _windowse…   143.0  │                                                            │                            ┃
│    829 root         121.0  │ 1 / 2 / 3 / 4  overview · procs · thermal · connections    │                            ┃
│    591 _windowse…   119.0  │          tab  cycle views                                  │                            ┃
│    353 yusuf        117.0  │    j k / ↑ ↓  select process                               │                            ┃
│    812 yusuf        108.0  │        g / G  jump to top / bottom                         │                            ┃
│    574 root         106.0  │      / or F3  filter processes (esc clears)                │                            ┃
│    336 _windowse…   104.0  │      s or F6  sort menu · click headers too                │                            ┃
│    795 _windowse…    95.0  │      x or F9  kill selected process                        │                            ┃
│    557 yusuf         93.0  │        enter  process details                              │                            ┃
│    319 root          91.0  │            o  settings (panes · theme · sampling)          │                            ┃
│    778 root          82.0  │            t  cycle theme                                  │                            ┃
│    540 _windowse…    80.0  │            p  pause sampling                               │                            ┃
│    302 yusuf         78.0  │        + / -  faster / slower sampling                     │                            ┃
│    761 yusuf         69.0  │            d  debug HUD                                    │                            ┃
│    523 root          67.0  │        mouse  click tabs, headers, rows · wheel scrolls    │                            ┃
│    285 _windowse…    65.0  │     q or F10  quit                                         │                            ┃
│    744 _windowse…    56.0  │                                                            │                            ┃
│    506 yusuf         54.0  │        mxmon  sudoless Apple Silicon monitor               │                            ┃
│    268 root          52.0  ╰────────────────────────────────────────────────────────────╯                            ┃
│    710 yusuf         30.0  870mW    1.1G       –       –   11 I   20m 30s postgres                                   │
│    472 root          28.0  464mW    642M       –       –   20 R   11m 52s mxmon                                      │
│    234 _windowse…    26.0   58mW    124M       –       –    6 I    3m 14s kernel_task                                │
│    693 _windowse…    17.0  841mW    1.1G       –       –   10 S   19m 53s node                                       │
│    455 yusuf         15.0  435mW    605M       –       –   19 S   11m 15s nginx                                      │
│    217 root          13.0   29mW     87M       –       –    5 S    2m 37s WindowServer                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit
