src/ui/snapshots/modal_settings_120x36.snap
---
source: src/ui/layout.rs
assertion_line: 492
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                   load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸PROCESSES╺ 160 · 10 running · 549 thr ───────────────────────────────────────────────────────────────────────────────╮
│    PID USER         CPU%▼    PWR     MEM     ↓/s     ↑/s  THR S      TIME NAME                                       │
│    659 yusuf        171.0  783mW    1.0G       –       –    8 S   18m 39s bird                                       ┃
│    421 root         169.0  377mW    531M       –       –   17 S   10m 01s node                                       ┃
│    642 _windowse…   158.0  754mW   1012M       –       –    7 I   18m 02s mds_stores                                 ┃
│    404 yusuf        156.0  348mW    494M       –       –   16 R    9m 24s Xcode                                      ┃
│    863 yusuf        147.0  231mW    1.5G       –       –   20 S   26m 03s Music                                      ┃
│    625 root         145.0  725mW    975M       –       –    6 S   17m 25s Terminal                                   ┃
│    387 _windowse…   143.0  319mW    457M       –       –   15 S    8m 47s bird                                       ┃
│    829 root         121.0  173mW    1.4G       –       –   18 S   24m 49s cargo                                      ┃
│    591 _windowse…   119.0  667mW    901M       –       –    4 S   16m 11s Music                                      ┃
│    353 yusuf        117.0  2╭ settings ───────────────────────────────────────────── ✕ ╮                             ┃
│    812 yusuf        108.0  1│   process panes  ‹ 1 · widgets get the spare width    ›  │                             ┃
│    574 root         106.0  6│   theme          ‹ midnight                           ›  │                             ┃
│    336 _windowse…   104.0  2│   schematic      ‹ on · blueprint under the heat map  ›  │                             ┃
│    795 _windowse…    95.0  1│   contours       ‹ on · isotherm rings over the deck  ›  │                             ┃
│    557 yusuf         93.0  6│   sampling       ‹ 250 ms                             ›  │                             ┃
│    319 root          91.0  2│   ping probe     ‹ on · 1.1.1.1                       ›  │                             ┃
│    778 root          82.0   │                                                          │                             ┃
│    540 _windowse…    80.0  5│   also cycles live with t                                │                             ┃
│    302 yusuf         78.0  1│                                                          │                             ┃
│    761 yusuf         69.0   │   ↑↓ select · ←→ change · esc close                      │                             ┃
│    523 root          67.0  5╰──────────────────────────────────────────────────────────╯                             ┃
│    285 _windowse…    65.0  145mW    235M       –       –    9 S    5m 05s cargo                                      ┃
│    744 _windowse…    56.0   28mW    1.2G       –       –   13 R   21m 44s mxmon                                      ┃
│    506 yusuf         54.0  522mW    716M       –       –   22 I   13m 06s kernel_task                                ┃
│    268 root          52.0  116mW    198M    105K     30K    8 R    4m 28s claude                                     ┃
│    710 yusuf         30.0  870mW    1.1G       –       –   11 I   20m 30s postgres                                   │
│    472 root          28.0  464mW    642M       –       –   20 R   11m 52s mxmon                                      │
│    234 _windowse…    26.0   58mW    124M       –       –    6 I    3m 14s kernel_task                                │
│    693 _windowse…    17.0  841mW    1.1G       –       –   10 S   19m 53s node                                       │
│    455 yusuf         15.0  435mW    605M       –       –   19 S   11m 15s nginx                                      │
│    217 root          13.0   29mW     87M       –       –    5 S    2m 37s WindowServer                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit
